Página Web Amigu-arte

--- a/ParaBelleza.html
+++ b/ParaBelleza.html
@@ -32,6 +32,24 @@
             </li>
         </ul>
     </nav>
+    <h1 class="titulos-pequeños">Para mi belleza</h1>
+    <ul class="lista-productos">
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/belleza/AirBrush_20210129050957.jpg" alt="">
+            <h2 class="titulo-producto">Esponja de baño</h2>
+            <p class="descripcion-producto">Descripción del Producto 1.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/belleza/AirBrush_20210129051202.jpg" alt="">
+            <h2 class="titulo-producto">Discos desmaquillantes</h2>
+            <p class="descripcion-producto">Descripción del Producto 2.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/belleza/AirBrush_20210129050747.jpg" alt="">
+            <h2 class="titulo-producto">Vincha</h2>
+            <p class="descripcion-producto">Descripción del Producto 3.</p>
+        </li>
+    </ul>
     <footer>
         <div class="container">
           <p>&copy; 2023 Amigu-arte</p>
