--- a/ParaJugar.html
+++ b/ParaJugar.html
@@ -32,6 +32,49 @@
             </li>
         </ul>
     </nav>
+    <h1 class="titulos-pequeños">Para jugar</h1>
+    <ul class="lista-productos">
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20190206_171347.jpg" alt="">
+            <h2 class="titulo-producto">Oso encastrable</h2>
+            <p class="descripcion-producto">Descripción del Producto 1.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20190109_121847.jpg" alt="">
+            <h2 class="titulo-producto">Unicornio</h2>
+            <p class="descripcion-producto">Descripción del Producto 2.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20200705_183021333.jpg" alt="">
+            <h2 class="titulo-producto">Unicornio</h2>
+            <p class="descripcion-producto">Descripción del Producto 3.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/jugar/CAM00637.jpg" alt="">
+            <h2 class="titulo-producto">Animales Varios</h2>
+            <p class="descripcion-producto">Descripción del Producto 4.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/jugar/20210709_011651.jpg" alt="">
+            <h2 class="titulo-producto">Pulpo reversible</h2>
+            <p class="descripcion-producto">Descripción del Producto 5.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/jugar/20210709_011617.jpg" alt="">
+            <h2 class="titulo-producto">Pulpo reversible</h2>
+            <p class="descripcion-producto">Descripción del Producto 6.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20200831_213821447.jpg" alt="">
+            <h2 class="titulo-producto">Llamitas</h2>
+            <p class="descripcion-producto">Descripción del Producto 7.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20210622_201224351.jpg" alt="">
+            <h2 class="titulo-producto">Animales varios</h2>
+            <p class="descripcion-producto">Descripción del Producto 8.</p>
+        </li>
+    </ul>
     <footer>
         <div class="container">
           <p>&copy; 2023 Amigu-arte</p>
