--- a/ParaHogar.html
+++ b/ParaHogar.html
@@ -34,27 +34,34 @@
             </li>
         </ul>
     </nav>
-    <div class="contenedor-tarjetas">
-        <div class="tarjeta">
+    <h1 class="titulos-pequeños">Para el hogar</h1>
+    <ul class="lista-productos">
+        
+        <li class="producto">
             <img class="imagen-tarjeta" src="./imagenes/hogar/CAM00378.jpg" alt="">
-            <h2 class="h2-tarjeta">Agarraderas tejidas al crochet en forma de oveja</h2>
-            <p>Encantadoras y prácticas, estas agarraderas tejidas a mano añaden un toque rústico y adorable a tu
-                cocina. Su
-                suave textura y diseño de oveja las hacen ideales para protegerte del calor de las ollas y sartenes
-                mientras
-                cocinas. </p>
-        </div>
-        <div class="tarjeta">
+            <h2 class="titulo-producto">Agarraderas tejidas al crochet en forma de oveja</h2>
+            <p class="descripcion-producto">Encantadoras y prácticas, estas agarraderas tejidas a mano añaden un toque
+                rústico y adorable a tu cocina. Su suave textura y diseño de oveja las hacen ideales para protegerte del
+                calor de las ollas y sartenes
+                mientras cocinas.
+            </p>
+        </li>
+        <li class="producto">
             <img class="imagen-tarjeta" src="./imagenes/hogar/IMG_20170910_114352.jpg" alt="">
+            <h2 class="titulo-producto">Alfileteros en forma de comida</h2>
+            <p class="descripcion-producto">Descripción del Producto 2.</p>
+        </li>
+        <li class="producto">
             <img class="imagen-tarjeta" src="./imagenes/hogar/IMG_20180823_215925.jpg" alt="">
-            <h2 class="h2-tarjeta">Alfileteros en forma de comida</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, enim. Inventore corporis esse rerum
-                fugiat in eaque eos, soluta magnam amet cum excepturi recusandae minima dolores eveniet non itaque
-                reprehenderit?</p>
-        </div>
-    </div>
-
-
+            <h2 class="titulo-producto">Alfileteros en forma de comida</h2>
+            <p class="descripcion-producto">Descripción del Producto 2.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/hogar/IMG_20180904_200459.jpg" alt="">
+            <h2 class="titulo-producto">Alfileteros en forma de comida</h2>
+            <p class="descripcion-producto">Descripción del Producto 2.</p>
+        </li>
+    </ul>
     <footer>
         <div class="container">
             <p>&copy; 2023 Amigu-arte</p>
