--- a/ParaRegalar.html
+++ b/ParaRegalar.html
@@ -32,6 +32,84 @@
             </li>
         </ul>
     </nav>
+    <h1 class="titulos-pequeños">Para regalar</h1>
+    <ul class="lista-productos">
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/03002a49.png" alt="">
+            <h2 class="titulo-producto">Stitch</h2>
+            <p class="descripcion-producto">Descripción del Producto 1.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/20210727_170759.jpg" alt="">
+            <h2 class="titulo-producto">Ululette</h2>
+            <p class="descripcion-producto">Descripción del Producto 2.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/20210727_170829.jpg" alt="">
+            <h2 class="titulo-producto">Gekko</h2>
+            <p class="descripcion-producto">Descripción del Producto 3.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20210203_101545164.jpg" alt="">
+            <h2 class="titulo-producto">Los 3 chanchitos</h2>
+            <p class="descripcion-producto">Descripción del Producto 4.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20210424_225359490.jpg" alt="">
+            <h2 class="titulo-producto">Marvel</h2>
+            <p class="descripcion-producto">Descripción del Producto 5.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20211029_205821876.jpg" alt="">
+            <h2 class="titulo-producto">La granja de Zenón</h2>
+            <p class="descripcion-producto">Descripción del Producto 6.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/20210727_170848.jpg" alt="">
+            <h2 class="titulo-producto">Catboy</h2>
+            <p class="descripcion-producto">Descripción del Producto 7.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/IMG-20200709-WA0009.jpeg" alt="">
+            <h2 class="titulo-producto">El principito</h2>
+            <p class="descripcion-producto">Descripción del Producto 8.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/IMG-20210117-WA0007.jpeg" alt="">
+            <h2 class="titulo-producto">Groot</h2>
+            <p class="descripcion-producto">Descripción del Producto 9.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20200702_101521896.jpg" alt="">
+            <h2 class="titulo-producto">La vecindad del Chavo</h2>
+            <p class="descripcion-producto">Descripción del Producto 10.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20201013_145549465.jpg" alt="">
+            <h2 class="titulo-producto">Muñequitas</h2>
+            <p class="descripcion-producto">Descripción del Producto 11.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/IMG-20210216-WA0017.jpg" alt="">
+            <h2 class="titulo-producto">Laboratorio químico</h2>
+            <p class="descripcion-producto">Descripción del Producto 12.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20170607_210745.jpg" alt="">
+            <h2 class="titulo-producto">Albert Einstein</h2>
+            <p class="descripcion-producto">Descripción del Producto 13.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20170711_113552.jpg" alt="">
+            <h2 class="titulo-producto">Patitas</h2>
+            <p class="descripcion-producto">Descripción del Producto 14.</p>
+        </li>
+        <li class="producto">
+            <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20210208_202001913_HDR.jpg" alt="">
+            <h2 class="titulo-producto">Nene personalizado</h2>
+            <p class="descripcion-producto">Descripción del Producto 15.</p>
+        </li>
+    </ul>
     <footer>
         <div class="container">
           <p>&copy; 2023 Amigu-arte</p>
