Página Web Amigu-arte

--- a/Conoceme.html
+++ b/Conoceme.html
@@ -39,7 +39,8 @@
         <img src="./imagenes/logos/5387666-removebg-preview.png" alt="" class="imagen-controlada">
     </div>
     <p>
-        ¡Hola! Soy Paula, y desde que tengo memoria las agujas y los hilos han sido mis compañeros más fieles. Tejer es más que una
+        ¡Hola! Soy Paula, y desde que tengo memoria las agujas y los hilos han sido mis compañeros más fieles. Tejer es
+        más que una
         simple
         afición para mí; es mi forma de crear arte y de expresar emociones. Soy una tejedora de crochet apasionada
         y, en
