--- a/ParaJugar.html
+++ b/ParaJugar.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Amigu-arte</title>
 </head>
+
 <body>
     <nav>
         <ul>
@@ -16,7 +18,7 @@
             <li class="items-nav">
                 <a href="Conoceme.html">Conoceme</a>
             </li>
-            <li >
+            <li>
                 <div class="dropdown">
                     <button class="dropbtn">Mis amigurumis</button>
                     <div class="dropdown-content">
@@ -37,17 +39,28 @@
         <li class="producto">
             <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20190206_171347.jpg" alt="">
             <h2 class="titulo-producto">Oso encastrable</h2>
-            <p class="descripcion-producto">Descripción del Producto 1.</p>
+            <p class="descripcion-producto">Es un juguete encantador que combina la suavidad de un peluche con la
+                diversión de encastrarlo. Con sus piezas tejidas a mano, invita a los niños a aprender y jugar
+                mientras ensamblan este adorable amigo.
+            </p>
         </li>
         <li class="producto">
             <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20190109_121847.jpg" alt="">
             <h2 class="titulo-producto">Unicornio</h2>
-            <p class="descripcion-producto">Descripción del Producto 2.</p>
+            <p class="descripcion-producto">Un unicornio tejido al crochet es un mágico y tierno compañero de peluche
+                que hará que los corazones de niños y adultos se iluminen. Con su colorido y detallado diseño tejido a
+                mano, este unicornio es la perfecta combinación entre lo lúdico y lo artesanal. Un regalo que despierta
+                sonrisas y fantasía.
+            </p>
         </li>
         <li class="producto">
             <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20200705_183021333.jpg" alt="">
             <h2 class="titulo-producto">Unicornio</h2>
-            <p class="descripcion-producto">Descripción del Producto 3.</p>
+            <p class="descripcion-producto">Este adorable unicornio tejido al crochet es más encantador gracias a su
+                vincha de flores. Sus colores suaves y la delicada elaboración a mano hacen que este unicornio sea una
+                verdadera obra de arte. Sus flores aportan un toque de color y elegancia, convirtiéndolo en el compañero
+                perfecto para quienes buscan un toque de magia y belleza en sus vidas.
+            </p>
         </li>
         <li class="producto">
             <img class="imagen-tarjeta" src="./imagenes/jugar/CAM00637.jpg" alt="">
@@ -77,8 +90,9 @@
     </ul>
     <footer>
         <div class="container">
-          <p>&copy; 2023 Amigu-arte</p>
+            <p>&copy; 2023 Amigu-arte</p>
         </div>
     </footer>
 </body>
+
 </html>
