Página Web Amigu-arte

--- a/ParaJugar.html
+++ b/ParaJugar.html
@@ -5,33 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/6242ef6b23.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./styleAmig.css">
     <title>Amigu-arte</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
+            <a class="navbar-brand" href="index.html"><img src="./imagenes/logos/e7c4c1b765fed27981a73e87f1a71f1b-removebg.png" alt="Bootstrap" width="30"
+                height="24">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <img src="./imagenes/logos/e7c4c1b765fed27981a73e87f1a71f1b-removebg.png" alt="Bootstrap" width="30"
-                        height="24">
                     <li class="nav-item">
-                        <a class="nav-link active items-nav" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link active" href="Conoceme.html">Conoceme</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link items-nav" href="Conoceme.html">Conoceme</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link items-nav" href="Contactame.html">Contactame</a>
+                        <a class="nav-link active" href="Contactame.html">Contactame</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle dropbtn" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Mis amigurumis
                         </a>
-                        <ul class="dropdown-content">
+                        <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="ParaHogar.html">Para el hogar</a></li>
                             <li><a class="dropdown-item" href="ParaJugar.html">Para jugar</a></li>
                             <li><a class="dropdown-item" href="ParaBelleza.html">Para mi belleza</a></li>
@@ -119,6 +123,9 @@
             </p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
